reformatting with black

--- a/img_recognizer/deep_learning_resnet.ipynb
+++ b/img_recognizer/deep_learning_resnet.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Joseph Moussa\\anaconda3\\lib\\site-packages\\torchvision\\io\\image.py:11: UserWarning: Failed to load image Python extension: [WinError 127] The specified procedure could not be found\n",
-      "  warn(f\"Failed to load image Python extension: {e}\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import modules and useful libraries\n",
     "import model, dataset, train, evaluation\n",
@@ -33,10 +24,14 @@
    "outputs": [],
    "source": [
     "# Set up different paths to read images and metadata\n",
-    "base_path_train = \"C:/Users/Joseph Moussa/Desktop/X/4A/QB Hackathon/train_data/\"\n",
-    "base_path_test = \"C:/Users/Joseph Moussa/Desktop/X/4A/QB Hackathon/test_data/\"\n",
-    "metadata_csv_path_train = \"C:/Users/Joseph Moussa/Desktop/X/4A/QB Hackathon/train_data/metadata.csv\"\n",
-    "metadata_csv_path_test = \"C:/Users/Joseph Moussa/Desktop/X/4A/QB Hackathon/test_data/metadata.csv\""
+    "base_path_train = (\n",
+    "    \"C:/Users/ibenn/Desktop/DSB/Year 2 HEC/Jimams-methanekiller/data/train_data/\"\n",
+    ")\n",
+    "base_path_test = (\n",
+    "    \"C:/Users/ibenn/Desktop/DSB/Year 2 HEC/Jimams-methanekiller/data/test_data/\"\n",
+    ")\n",
+    "metadata_csv_path_train = \"C:/Users/ibenn/Desktop/DSB/Year 2 HEC/Jimams-methanekiller/data/train_data/metadata.csv\"\n",
+    "metadata_csv_path_test = \"C:/Users/ibenn/Desktop/DSB/Year 2 HEC/Jimams-methanekiller/data/test_data/metadata.csv\""
    ]
   },
   {
@@ -55,7 +50,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using cache found in C:\\Users\\Joseph Moussa/.cache\\torch\\hub\\pytorch_vision_v0.10.0\n"
+      "Using cache found in C:\\Users\\ibenn/.cache\\torch\\hub\\pytorch_vision_v0.10.0\n",
+      "c:\\Users\\ibenn\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\methane-killer-Qf5rJjK0-py3.11\\Lib\\site-packages\\torchvision\\models\\_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\ibenn\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\methane-killer-Qf5rJjK0-py3.11\\Lib\\site-packages\\torchvision\\models\\_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=ResNet18_Weights.IMAGENET1K_V1`. You can also use `weights=ResNet18_Weights.DEFAULT` to get the most up-to-date weights.\n",
+      "  warnings.warn(msg)\n"
      ]
     }
    ],
@@ -172,23 +171,60 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'C:/Users/Joseph Moussa/Desktop/X/4A/QB Hackathon/train_data/metadata.csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\ibenn\\Desktop\\DSB\\Year 2 HEC\\Jimams-methanekiller\\img_recognizer\\deep_learning_resnet.ipynb Cell 6\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/ibenn/Desktop/DSB/Year%202%20HEC/Jimams-methanekiller/img_recognizer/deep_learning_resnet.ipynb#W5sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Read metadata for training and testing datasets\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/ibenn/Desktop/DSB/Year%202%20HEC/Jimams-methanekiller/img_recognizer/deep_learning_resnet.ipynb#W5sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m metadata_train \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39;49mread_csv(metadata_csv_path_train)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/ibenn/Desktop/DSB/Year%202%20HEC/Jimams-methanekiller/img_recognizer/deep_learning_resnet.ipynb#W5sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m metadata_test \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(metadata_csv_path_test)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/ibenn/Desktop/DSB/Year%202%20HEC/Jimams-methanekiller/img_recognizer/deep_learning_resnet.ipynb#W5sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# Split the training data into training and validation sets while maintaining class distribution\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\ibenn\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\methane-killer-Qf5rJjK0-py3.11\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:948\u001b[0m, in \u001b[0;36mread_csv\u001b[1;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, date_format, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, encoding_errors, dialect, on_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options, dtype_backend)\u001b[0m\n\u001b[0;32m    935\u001b[0m kwds_defaults \u001b[39m=\u001b[39m _refine_defaults_read(\n\u001b[0;32m    936\u001b[0m     dialect,\n\u001b[0;32m    937\u001b[0m     delimiter,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    944\u001b[0m     dtype_backend\u001b[39m=\u001b[39mdtype_backend,\n\u001b[0;32m    945\u001b[0m )\n\u001b[0;32m    946\u001b[0m kwds\u001b[39m.\u001b[39mupdate(kwds_defaults)\n\u001b[1;32m--> 948\u001b[0m \u001b[39mreturn\u001b[39;00m _read(filepath_or_buffer, kwds)\n",
+      "File \u001b[1;32mc:\\Users\\ibenn\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\methane-killer-Qf5rJjK0-py3.11\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:611\u001b[0m, in \u001b[0;36m_read\u001b[1;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[0;32m    608\u001b[0m _validate_names(kwds\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mnames\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mNone\u001b[39;00m))\n\u001b[0;32m    610\u001b[0m \u001b[39m# Create the parser.\u001b[39;00m\n\u001b[1;32m--> 611\u001b[0m parser \u001b[39m=\u001b[39m TextFileReader(filepath_or_buffer, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwds)\n\u001b[0;32m    613\u001b[0m \u001b[39mif\u001b[39;00m chunksize \u001b[39mor\u001b[39;00m iterator:\n\u001b[0;32m    614\u001b[0m     \u001b[39mreturn\u001b[39;00m parser\n",
+      "File \u001b[1;32mc:\\Users\\ibenn\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\methane-killer-Qf5rJjK0-py3.11\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:1448\u001b[0m, in \u001b[0;36mTextFileReader.__init__\u001b[1;34m(self, f, engine, **kwds)\u001b[0m\n\u001b[0;32m   1445\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39moptions[\u001b[39m\"\u001b[39m\u001b[39mhas_index_names\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m kwds[\u001b[39m\"\u001b[39m\u001b[39mhas_index_names\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[0;32m   1447\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mhandles: IOHandles \u001b[39m|\u001b[39m \u001b[39mNone\u001b[39;00m \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m-> 1448\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_engine \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_make_engine(f, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mengine)\n",
+      "File \u001b[1;32mc:\\Users\\ibenn\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\methane-killer-Qf5rJjK0-py3.11\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:1705\u001b[0m, in \u001b[0;36mTextFileReader._make_engine\u001b[1;34m(self, f, engine)\u001b[0m\n\u001b[0;32m   1703\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mb\u001b[39m\u001b[39m\"\u001b[39m \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m mode:\n\u001b[0;32m   1704\u001b[0m         mode \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mb\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m-> 1705\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mhandles \u001b[39m=\u001b[39m get_handle(\n\u001b[0;32m   1706\u001b[0m     f,\n\u001b[0;32m   1707\u001b[0m     mode,\n\u001b[0;32m   1708\u001b[0m     encoding\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49moptions\u001b[39m.\u001b[39;49mget(\u001b[39m\"\u001b[39;49m\u001b[39mencoding\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39mNone\u001b[39;49;00m),\n\u001b[0;32m   1709\u001b[0m     compression\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49moptions\u001b[39m.\u001b[39;49mget(\u001b[39m\"\u001b[39;49m\u001b[39mcompression\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39mNone\u001b[39;49;00m),\n\u001b[0;32m   1710\u001b[0m     memory_map\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49moptions\u001b[39m.\u001b[39;49mget(\u001b[39m\"\u001b[39;49m\u001b[39mmemory_map\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39mFalse\u001b[39;49;00m),\n\u001b[0;32m   1711\u001b[0m     is_text\u001b[39m=\u001b[39;49mis_text,\n\u001b[0;32m   1712\u001b[0m     errors\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49moptions\u001b[39m.\u001b[39;49mget(\u001b[39m\"\u001b[39;49m\u001b[39mencoding_errors\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39mstrict\u001b[39;49m\u001b[39m\"\u001b[39;49m),\n\u001b[0;32m   1713\u001b[0m     storage_options\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49moptions\u001b[39m.\u001b[39;49mget(\u001b[39m\"\u001b[39;49m\u001b[39mstorage_options\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39mNone\u001b[39;49;00m),\n\u001b[0;32m   1714\u001b[0m )\n\u001b[0;32m   1715\u001b[0m \u001b[39massert\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mhandles \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m   1716\u001b[0m f \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mhandles\u001b[39m.\u001b[39mhandle\n",
+      "File \u001b[1;32mc:\\Users\\ibenn\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\methane-killer-Qf5rJjK0-py3.11\\Lib\\site-packages\\pandas\\io\\common.py:863\u001b[0m, in \u001b[0;36mget_handle\u001b[1;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[0;32m    858\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39misinstance\u001b[39m(handle, \u001b[39mstr\u001b[39m):\n\u001b[0;32m    859\u001b[0m     \u001b[39m# Check whether the filename is to be opened in binary mode.\u001b[39;00m\n\u001b[0;32m    860\u001b[0m     \u001b[39m# Binary mode does not support 'encoding' and 'newline'.\u001b[39;00m\n\u001b[0;32m    861\u001b[0m     \u001b[39mif\u001b[39;00m ioargs\u001b[39m.\u001b[39mencoding \u001b[39mand\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mb\u001b[39m\u001b[39m\"\u001b[39m \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m ioargs\u001b[39m.\u001b[39mmode:\n\u001b[0;32m    862\u001b[0m         \u001b[39m# Encoding\u001b[39;00m\n\u001b[1;32m--> 863\u001b[0m         handle \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39;49m(\n\u001b[0;32m    864\u001b[0m             handle,\n\u001b[0;32m    865\u001b[0m             ioargs\u001b[39m.\u001b[39;49mmode,\n\u001b[0;32m    866\u001b[0m             encoding\u001b[39m=\u001b[39;49mioargs\u001b[39m.\u001b[39;49mencoding,\n\u001b[0;32m    867\u001b[0m             errors\u001b[39m=\u001b[39;49merrors,\n\u001b[0;32m    868\u001b[0m             newline\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[0;32m    869\u001b[0m         )\n\u001b[0;32m    870\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    871\u001b[0m         \u001b[39m# Binary mode\u001b[39;00m\n\u001b[0;32m    872\u001b[0m         handle \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39m(handle, ioargs\u001b[39m.\u001b[39mmode)\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'C:/Users/Joseph Moussa/Desktop/X/4A/QB Hackathon/train_data/metadata.csv'"
+     ]
+    }
+   ],
    "source": [
     "# Read metadata for training and testing datasets\n",
     "metadata_train = pd.read_csv(metadata_csv_path_train)\n",
     "metadata_test = pd.read_csv(metadata_csv_path_test)\n",
     "\n",
     "# Split the training data into training and validation sets while maintaining class distribution\n",
-    "train_metadata, val_metadata = train_test_split(metadata_train, test_size=0.3, random_state=42, stratify=metadata_train['plume'])\n",
+    "train_metadata, val_metadata = train_test_split(\n",
+    "    metadata_train, test_size=0.3, random_state=42, stratify=metadata_train[\"plume\"]\n",
+    ")\n",
     "\n",
     "# Create new instances of the TrainData class for training and validation, augment the training dataset\n",
-    "data_train_original = dataset.TrainData(metadata=train_metadata, base_path=base_path_train)\n",
-    "data_train_hflip = dataset.TrainData(metadata=train_metadata, base_path=base_path_train, augmentation=transforms.RandomHorizontalFlip(p=1.))\n",
-    "data_train_vflip = dataset.TrainData(metadata=train_metadata, base_path=base_path_train, augmentation=transforms.RandomVerticalFlip(p=1.))\n",
-    "data_train_gblur = dataset.TrainData(metadata=train_metadata, base_path=base_path_train, augmentation=transforms.GaussianBlur(kernel_size=3, sigma=(0.1, 1.0)))\n",
-    "data_train = ConcatDataset([data_train_original, data_train_hflip, data_train_vflip, data_train_gblur])\n",
+    "data_train_original = dataset.TrainData(\n",
+    "    metadata=train_metadata, base_path=base_path_train\n",
+    ")\n",
+    "data_train_hflip = dataset.TrainData(\n",
+    "    metadata=train_metadata,\n",
+    "    base_path=base_path_train,\n",
+    "    augmentation=transforms.RandomHorizontalFlip(p=1.0),\n",
+    ")\n",
+    "data_train_vflip = dataset.TrainData(\n",
+    "    metadata=train_metadata,\n",
+    "    base_path=base_path_train,\n",
+    "    augmentation=transforms.RandomVerticalFlip(p=1.0),\n",
+    ")\n",
+    "data_train_gblur = dataset.TrainData(\n",
+    "    metadata=train_metadata,\n",
+    "    base_path=base_path_train,\n",
+    "    augmentation=transforms.GaussianBlur(kernel_size=3, sigma=(0.1, 1.0)),\n",
+    ")\n",
+    "data_train = ConcatDataset(\n",
+    "    [data_train_original, data_train_hflip, data_train_vflip, data_train_gblur]\n",
+    ")\n",
     "\n",
-    "data_validation = dataset.TrainData(metadata=val_metadata, base_path=base_path_train, augmentation=None)\n",
+    "data_validation = dataset.TrainData(\n",
+    "    metadata=val_metadata, base_path=base_path_train, augmentation=None\n",
+    ")\n",
     "\n",
     "# Create new instance of the TestData class for testing\n",
     "data_test = dataset.TestData(metadata=metadata_test, base_path=base_path_test)"
@@ -196,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +351,16 @@
    ],
    "source": [
     "# Train model\n",
-    "resnet18_trained = train.train(model=resnet18, data_train=data_train, data_validation=data_validation, loss_fn=loss_fn, lr=lr, epochs=epochs, batch_size=batch_size, print_progress=True)"
+    "resnet18_trained = train.train(\n",
+    "    model=resnet18,\n",
+    "    data_train=data_train,\n",
+    "    data_validation=data_validation,\n",
+    "    loss_fn=loss_fn,\n",
+    "    lr=lr,\n",
+    "    epochs=epochs,\n",
+    "    batch_size=batch_size,\n",
+    "    print_progress=True,\n",
+    ")"
    ]
   },
   {
@@ -327,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -439,11 +484,15 @@
    ],
    "source": [
     "# Calculate AUC scores on training and validation datasets\n",
-    "auc_train_score = evaluation.calculate_auc(model=resnet18_trained, data=data_train, batch_size=1)\n",
-    "auc_valid_score = evaluation.calculate_auc(model=resnet18_trained, data=data_validation, batch_size=1)\n",
+    "auc_train_score = evaluation.calculate_auc(\n",
+    "    model=resnet18_trained, data=data_train, batch_size=1\n",
+    ")\n",
+    "auc_valid_score = evaluation.calculate_auc(\n",
+    "    model=resnet18_trained, data=data_validation, batch_size=1\n",
+    ")\n",
     "\n",
-    "print(f'AUC on the training dataset: {auc_train_score}')\n",
-    "print(f'AUC on the validation dataset: {auc_valid_score}')"
+    "print(f\"AUC on the training dataset: {auc_train_score}\")\n",
+    "print(f\"AUC on the validation dataset: {auc_valid_score}\")"
    ]
   },
   {
@@ -455,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,24 +528,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Store predictions in a dataframe\n",
     "df_submission = pd.DataFrame()\n",
-    "df_submission['path'] = data_test.metadata['date'].astype(str) + '_methane_mixing_ratio_' + data_test.metadata['id_coord'] + '.tif'\n",
-    "df_submission['label'] = predictions"
+    "df_submission[\"path\"] = (\n",
+    "    data_test.metadata[\"date\"].astype(str)\n",
+    "    + \"_methane_mixing_ratio_\"\n",
+    "    + data_test.metadata[\"id_coord\"]\n",
+    "    + \".tif\"\n",
+    ")\n",
+    "df_submission[\"label\"] = predictions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save model\n",
+    "torch.save(model.state_dict(), \"resnet18.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save to CSV file\n",
-    "submissions_path = \"C:/Users/Joseph Moussa/Desktop/X/4A/QB Hackathon/data_aug_resnet18.csv\"\n",
+    "submissions_path = (\n",
+    "    \"C:/Users/Joseph Moussa/Desktop/X/4A/QB Hackathon/data_aug_resnet18.csv\"\n",
+    ")\n",
     "df_submission.to_csv(submissions_path, index=False)"
    ]
   }
@@ -517,7 +583,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
